# filen-cli-rs

./: Cargo.toml  README.md
src/: auth.rs  commands.rs  main.rs  util.rs
