[package]
name = "filen-cli-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.43", features = ["derive"] }
env_logger = "0.11.8"
filen-sdk-rs = { path = "../filen-rs/filen-sdk-rs" }
log = "0.4.27"
shlex = "1.3.0"
tokio = { version = "1.47.1", features = ["rt-multi-thread", "macros"] }
